@@ -215,6 +215,8 @@ Version 1.5.2 - SVN
     since it was not made use of and in rare cases, made sessions too big
   - Composition restoration functionality now correctly restores attachments
   - Added smtp_auth hook
+  - Removed "Include CCs when Forwarding Messages", which had no functionality
+    whatsoever.
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
